Added additional logging. Updated Claude configs